[package]
name = "smtree"
version = "0.1.0"
authors = ["Konstantinos Chalkias <kostascrypto@fb.com>", "Yan Ji <yji@fb.com>"]
edition = "2018"
description = "Paddable sparse Merkle tree in Rust"

[dependencies]
rand = "0.8.3"
digest = "0.9.0"
blake2 = "0.9.1"
sha2 = "0.9.2"
sha3 = "0.9.1"
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3.4"

[dependencies.blake3]
version = "0.3.7"
features = ["rayon"]
