[package]
name = "smtree"
version = "0.1.0"
repository = "https://github.com/novifinancial/smtree"
keywords = ["cryptography", "accumulator", "Merkle-tree", "privacy", "sampling", "auditing", "padding", "sparse-tree"]
description = "SMTree is a flexible sparse tree accumulator that can support various tree types via traits for custom node-merging (i.e., Merkle tree hashes) and tree-padding logic. The api supports single and batch inclusion proofs and random sampling."
authors = ["Konstantinos Chalkias <kostascrypto@fb.com>", "Yan Ji <yji@fb.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
rand = "0.8.3"
digest = "0.9.0"
blake2 = "0.9.1"
sha2 = "0.9.2"
sha3 = "0.9.1"
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3.4"

[dependencies.blake3]
version = "0.3.7"
features = ["rayon"]
